* Dec 18 2000 hship

Revisit the ScriptGenerator class, changing the format of the .script file from
home-brew to a fully specified XML document.

* Dec 15 2000 hship

Added the ScriptGenerator (and related classes) and converted the Rollover component
to use it.

* Dec 14 2000 hship

LOts of tweaks and cleanups to improve serialization.
Added the DataSqueezer and related classes that convert objects to Strings and back.
Added the Decorator class, used to match classes against adaptor objects.
Added some missing copyrights to various files.
Change the Inspector's "Properties" tab to show the serialized application with 32 bytes per line.
Changes ApplicationSpecification to store default page specification in a static variable, shared by all instances.

* Dec 13 2000 hship

Update the Tapestry Designer's Guide, to describe the new validating text fields.

* Dec 12 2000 hship

Fix some Javadoc errors in the new classes.

* Dec 12 2000 hship

Introduce IValidatingTextField and some implementations (ValidatingTextField,
DateField and IntegerField).
Remove many now unnecessary Makefiles from various packages.

* Dec 11 2000 hship

Split the application into the application object and the visit object.  
The visit object contains the server side state.
Remove the old constructors for AbstractComponent and BasePage.

* Nov 29 2000 hship

Update the Inspector to show the size and bytes of the serialized application object.

* Nov 29 2000 hship

Add reportException() method to ExceptionAnalyzer, and change AbstractApplication
to invoke it (intead of doing the work itself).

* Nov 22 2000 hship

Add the InsertText component.

* Nov 20 2000 hship

Release 0.2.6

* Nov 17 2000 hship

Fix typo in exception message for unreferenced components.
Fix bug in ImageButton that caused it to be confused about which ImageButton was clicked if
a form contains more than one.
Cache ExternalAssets in the PageSource (as with FieldBinding and StaticBinding),