@@ -2,6 +2,7 @@ package com.primix.tapestry.components;
 
 import java.io.*;
 import com.primix.tapestry.*;
+import com.primix.tapestry.script.*;
 import java.util.*;
 
 /*
@@ -35,7 +36,8 @@ import java.util.*;
 /**
  *  The body of a Tapestry page.  This is used since it allows components on the
  *  page access to an initialization script (that is written the start, just before
- *  the &lt;body&gt; tag).  This is currently used by {@link Rollover}.
+ *  the &lt;body&gt; tag).  This is currently used by {@link Rollover} and {@link Script}
+ *  components.
  *
  *  @author Howard Ship
  *  @version $Id$
@@ -70,20 +72,27 @@ public class Body extends AbstractComponent
 	/**
 	*  Adds to the script an initialization for the named variable as
 	*  an Image(), to the given URL.
+    *
+    *  <p>Returns a String that can be used to represent
+    *  the preloaded image in a JavaScript function.
 	*
 	*/
 
-	public void addImageInitialization(String imageName, String URL)
+	public String addImageInitialization(String imageName, String URL)
 	{
 		String variableName;
+        String result;
 
 		if (imageLines == null)
 			imageLines = new ArrayList();
 
 		variableName = "tapestry_preload['" + imageName + "']";
+        result = variableName = ".src";
 
 		imageLines.add(variableName + " = new Image()");
-		imageLines.add(variableName + ".src = \"" + URL + '"');
+		imageLines.add(result + " = \"" + URL + '"');
+
+        return result;
 	}
 
     /**
@@ -113,6 +122,10 @@ public class Body extends AbstractComponent
 	 *  <p>This is typically used to add some form of JavaScript
 	 *  event handler to a page.  For example, the
 	 *  {@link Rollover} component makes use of this.
+     *
+     *  <p>Another way this is invoked is by using the
+     *  {@link Script} component or {@link ScriptGenerator} class
+     * (which is actually what {@link Rollover} does).
 	 *
 	 *  <p>The string will be added, as-is, within
 	 *  the &lt;script&gt; block generated by this <code>Body</code> component.
@@ -147,19 +160,12 @@ public class Body extends AbstractComponent
 		return (Body)cycle.getAttribute(ATTRIBUTE_NAME);
 	}
 
-	/**
-	*  Returns a reference to the initialized image.  The returned
-	*  value is a String, suitable for insertion into a script, that
-	*  provides the URL of the image.  The value is quoted if that is
-	*  necesary.  This localizes how the scripts built by this
-	*  component work.
-	*
-	*/
-
-	public String getInitializedImage(String imageName)
-	{
-		return "tapestry_preload['" + imageName + "'].src";
-	}
+    /**
+     *  Returns a String that is unique for the current rendering
+     *  of this Body component.  This unique id is often appended to
+     *  names to form unique ids for elements and JavaScript functions.
+     *
+     */
 
 	public String getUniqueId()
 	{
@@ -263,7 +269,7 @@ public class Body extends AbstractComponent
 	*/
 
 
-	protected String writeScript()
+	private String writeScript()
 	{
 		Iterator i;
         String result = null;
