@@ -1,0 +1,23 @@
+<?xml version="1.0" encoding="UTF-8"?>
+<!--$Id$-->
+<!DOCTYPE specification PUBLIC "-//Primix Solutions//Tapestry Specification 1.0//EN"
+"http://tapestry.sourceforge.net/dtd/Tapestry_1_0.dtd">
+<specification>
+	<class>com.primix.tapestry.script.Script</class>
+	<allow-body>no</allow-body>
+	<parameters>
+		<allow-informal-parameters>yes</allow-informal-parameters>
+		<parameter>
+			<name>script</name>
+			<java-type>java.lang.String</java-type>
+			<required>yes</required>
+		</parameter>
+		<parameter>
+			<name>cautious</name>
+		</parameter>
+		<parameter>
+			<name>symbols</name>
+			<java-type>java.util.Map</java-type>
+		</parameter>
+	</parameters>
+</specification>
